// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcSmartTable #slots should render empty data with custom template 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <!---->
     
    <!---->
  </div>
   
  <div>
    Custom template - No items found
  </div>
</div>
`;

exports[`EcSmartTable #slots should render empty data with custom template and custom emptyMessage prop 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <!---->
     
    <!---->
  </div>
   
  <div>
    Custom template - No data
  </div>
</div>
`;

exports[`EcSmartTable #slots should render empty data with custom template, custom emptyMessage prop and header-actions slot with props 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <!---->
     
    <div
      class="ec-smart-table-heading"
    >
      <!---->
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions total: 0, items: [], error: , loading: false
        </div>
      </div>
    </div>
  </div>
   
  <div>
    Custom template - No data
  </div>
</div>
`;

exports[`EcSmartTable #slots should render empty data with header-actions slot 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <!---->
     
    <div
      class="ec-smart-table-heading"
    >
      <!---->
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions
        </div>
      </div>
    </div>
  </div>
   No items found
</div>
`;

exports[`EcSmartTable #slots should render empty data with header-actions slot with props 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <!---->
     
    <div
      class="ec-smart-table-heading"
    >
      <!---->
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions total: 0, items: [], error: , loading: false
        </div>
      </div>
    </div>
  </div>
   No items found
</div>
`;

exports[`EcSmartTable #slots should render error with custom template 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <!---->
     
    <!---->
  </div>
   
  <div>
    Custom template - Unexpected error while fetching data
  </div>
</div>
`;

exports[`EcSmartTable #slots should render error with custom template and custom errorMessage prop 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <!---->
     
    <!---->
  </div>
   
  <div>
    Custom template - Unexpected error
  </div>
</div>
`;

exports[`EcSmartTable #slots should render error with custom template, custom errorMessage prop and header-actions slot with props 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <!---->
     
    <div
      class="ec-smart-table-heading"
    >
      <!---->
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions total: 0, items: [], error: Unexpected error, loading: false
        </div>
      </div>
    </div>
  </div>
   
  <div>
    Custom template - Unexpected error
  </div>
</div>
`;

exports[`EcSmartTable #slots should render in loading state by default with the header-actions slot with props 1`] = `
<div
  class="ec-smart-table"
  data-test="ec-smart-table"
>
  <div>
    <!---->
     
    <div
      class="ec-smart-table-heading"
    >
      <!---->
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions total: , items: [], error: , loading: true
        </div>
      </div>
    </div>
  </div>
  <div
    class="tw-py-48"
  >
    <div
      class="ec-loading"
      data-test="ec-loading"
    >
      <div
        class="ec-loading__backdrop"
        data-test="ec-loading__backdrop"
      >
        <svg
          class="ec-loading__icon ec-icon"
          data-test="ec-loading__icon"
          height="48"
          width="48"
        >
          <use
            xlink:href="#ec-simple-loading"
          />
        </svg>
      </div>
       
      <div
        class="ec-loading__content"
        data-test="ec-loading__content"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`EcSmartTable #slots should render resolved data properly with the header-actions slot with props 1`] = `
<div
  class="ec-smart-table"
  data-test="ec-smart-table"
>
  <div>
    <!---->
     
    <div
      class="ec-smart-table-heading"
    >
      <!---->
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions total: 1, items: [
  [
    1,
    2,
    3
  ]
], error: , loading: false
        </div>
      </div>
    </div>
  </div>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <!---->
     
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      <div>
        <!---->
         
        <div
          class="ec-table-scroll-container"
          data-test="ec-table-scroll-container"
        >
          <table
            class="ec-table"
          >
            <thead
              class="ec-table-head"
              data-test="ec-table-head"
            >
              <tr>
                <th
                  class="ec-table-head__cell"
                  data-test="ec-table-head__cell ec-table-head__cell--0"
                  scope="col"
                >
                  <span
                    class="ec-table-head__cell-wrapper"
                  >
                    <span
                      class="ec-table-head__cell-text"
                    >
                      
          Test 1
        
                    </span>
                     
                    <!---->
                     
                    <a
                      class="ec-table-sort ec-table-head__icon"
                      data-test="ec-table-sort"
                      href="#"
                      title="Not sorted"
                    >
                      <svg
                        class="ec-icon ec-table-sort__icon"
                        data-test="ec-table-sort__icon"
                        height="16"
                        width="16"
                      >
                        <use
                          xlink:href="#ec-simple-arrow-up-down"
                        />
                      </svg>
                       
                      <!---->
                    </a>
                  </span>
                </th>
                <th
                  class="ec-table-head__cell"
                  data-test="ec-table-head__cell ec-table-head__cell--1"
                  scope="col"
                >
                  <span
                    class="ec-table-head__cell-wrapper"
                  >
                    <span
                      class="ec-table-head__cell-text"
                    >
                      
          Test 2
        
                    </span>
                     
                    <!---->
                     
                    <!---->
                  </span>
                </th>
                <th
                  class="ec-table-head__cell"
                  data-test="ec-table-head__cell ec-table-head__cell--2"
                  scope="col"
                >
                  <span
                    class="ec-table-head__cell-wrapper"
                  >
                    <span
                      class="ec-table-head__cell-text"
                    >
                      
          Test 3
        
                    </span>
                     
                    <!---->
                     
                    <a
                      class="ec-table-sort ec-table-head__icon"
                      data-test="ec-table-sort"
                      href="#"
                      title="Not sorted"
                    >
                      <svg
                        class="ec-icon ec-table-sort__icon"
                        data-test="ec-table-sort__icon"
                        height="16"
                        width="16"
                      >
                        <use
                          xlink:href="#ec-simple-arrow-up-down"
                        />
                      </svg>
                       
                      <!---->
                    </a>
                  </span>
                </th>
              </tr>
            </thead>
             
            <tbody>
              <tr
                class=""
                data-test="ec-table__row ec-table__row--0"
              >
                <td
                  class="ec-table__cell"
                  data-test="ec-table__cell ec-table__cell--0"
                >
                  1
                </td>
                <td
                  class="ec-table__cell"
                  data-test="ec-table__cell ec-table__cell--1"
                >
                  2
                </td>
                <td
                  class="ec-table__cell"
                  data-test="ec-table__cell ec-table__cell--2"
                >
                  3
                </td>
              </tr>
            </tbody>
             
            <!---->
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EcSmartTable filtering should handle changes in filters and reload the table data 1`] = `
<div
  data-test="my-table-filter"
>
  <div>
    # of filters: 2
  </div>
  <div>
    value: {}
  </div>
  <a
    data-test="my-table-filter__clear-button"
  >
    Clear
  </a>
</div>
`;

exports[`EcSmartTable filtering should handle changes in filters and reload the table data: loading icon after loading filtered data 1`] = `undefined`;

exports[`EcSmartTable filtering should handle changes in filters and reload the table data: loading icon while loading filtered data 1`] = `
<svg
  class="ec-loading__icon ec-icon"
  data-test="ec-loading__icon"
  height="48"
  width="48"
>
  <use
    xlink:href="#ec-simple-loading"
  />
</svg>
`;

exports[`EcSmartTable filtering should pass given prefilter with filter component 1`] = `
<div
  data-test="my-table-filter"
>
  <div>
    # of filters: 2
  </div>
  <div>
    value: {"test1":"test-value-1"}
  </div>
  <a
    data-test="my-table-filter__clear-button"
  >
    Clear
  </a>
</div>
`;

exports[`EcSmartTable filtering should render the given filter component 1`] = `
<div
  data-test="my-table-filter"
>
  <div>
    # of filters: 2
  </div>
  <div>
    value: {}
  </div>
  <a
    data-test="my-table-filter__clear-button"
  >
    Clear
  </a>
</div>
`;

exports[`EcSmartTable filtering should reset the page after changes in filters and reload the table data: pagination after changing the filters 1`] = `
<div
  class="ec-table-pagination"
  data-test="ec-smart-table-pagination ec-table-pagination"
>
  <div
    class="ec-table-pagination__page-size"
    data-test="ec-table-pagination__page-size"
  >
    <div
      class="ec-table-pagination__page-size-text"
    >
      Items per page:
    </div>
     
    <div
      class="ec-dropdown-search"
      data-test="ec-dropdown-search"
    >
      <ec-stub
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        offset="8"
        placement="bottom"
        popoverinnerclass="ec-dropdown-search__popover"
        popperoptions="[object Object]"
      >
        <button
          class="ec-table-pagination__action ec-table-pagination__action--page-size"
          data-test="ec-table-pagination__action--page-size"
        >
          
        10
        
          <svg
            class="ec-table-pagination__action-icon ec-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </button>
          
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <!---->
             
            <!---->
             
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="5"
            >
              5
            </li>
            <li
              class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="10"
            >
              10
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="50"
            >
              50
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="100"
            >
              100
            </li>
          </ul>
        </div>
      </ec-stub>
    </div>
  </div>
   
  <div
    class="ec-table-pagination__current-page"
    data-test="ec-table-pagination__current-page"
  >
    <span>
      1 of 5 pages
    </span>
     
    <span>
      (50 items)
    </span>
  </div>
   
  <div
    class="ec-table-pagination__total"
    data-test="ec-table-pagination__total"
  />
   
  <div
    class="ec-table-pagination__actions"
    data-test="ec-table-pagination__actions"
  >
    <button
      class="ec-table-pagination__action ec-table-pagination__action--prev ec-table-pagination__action--is-disabled"
      data-test="ec-table-pagination__action--prev"
      disabled="disabled"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-left"
        />
      </svg>
    </button>
     
    <button
      class="ec-table-pagination__action ec-table-pagination__action--next"
      data-test="ec-table-pagination__action--next"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-right"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`EcSmartTable filtering should reset the page after changes in filters and reload the table data: pagination after loading new page 1`] = `
<div
  class="ec-table-pagination"
  data-test="ec-smart-table-pagination ec-table-pagination"
>
  <div
    class="ec-table-pagination__page-size"
    data-test="ec-table-pagination__page-size"
  >
    <div
      class="ec-table-pagination__page-size-text"
    >
      Items per page:
    </div>
     
    <div
      class="ec-dropdown-search"
      data-test="ec-dropdown-search"
    >
      <ec-stub
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        offset="8"
        placement="bottom"
        popoverinnerclass="ec-dropdown-search__popover"
        popperoptions="[object Object]"
      >
        <button
          class="ec-table-pagination__action ec-table-pagination__action--page-size"
          data-test="ec-table-pagination__action--page-size"
        >
          
        10
        
          <svg
            class="ec-table-pagination__action-icon ec-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </button>
          
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <!---->
             
            <!---->
             
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="5"
            >
              5
            </li>
            <li
              class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="10"
            >
              10
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="50"
            >
              50
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="100"
            >
              100
            </li>
          </ul>
        </div>
      </ec-stub>
    </div>
  </div>
   
  <div
    class="ec-table-pagination__current-page"
    data-test="ec-table-pagination__current-page"
  >
    <span>
      2 of 5 pages
    </span>
     
    <span>
      (50 items)
    </span>
  </div>
   
  <div
    class="ec-table-pagination__total"
    data-test="ec-table-pagination__total"
  />
   
  <div
    class="ec-table-pagination__actions"
    data-test="ec-table-pagination__actions"
  >
    <button
      class="ec-table-pagination__action ec-table-pagination__action--prev"
      data-test="ec-table-pagination__action--prev"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-left"
        />
      </svg>
    </button>
     
    <button
      class="ec-table-pagination__action ec-table-pagination__action--next"
      data-test="ec-table-pagination__action--next"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-right"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`EcSmartTable pagination should pass pages slot into the pagination 1`] = `
<div
  class="ec-table-pagination__current-page"
  data-test="ec-table-pagination__current-page"
>
  <div>
    Pages: {"page":1,"numberOfItems":10,"totalPages":5,"total":50}
  </div>
</div>
`;

exports[`EcSmartTable pagination should re-fetch the data when next page is selected: loading icon after loading new page 1`] = `undefined`;

exports[`EcSmartTable pagination should re-fetch the data when next page is selected: loading icon while loading new page 1`] = `
<svg
  class="ec-loading__icon ec-icon"
  data-test="ec-loading__icon"
  height="48"
  width="48"
>
  <use
    xlink:href="#ec-simple-loading"
  />
</svg>
`;

exports[`EcSmartTable pagination should re-fetch the data when next page is selected: pagination after loading new page 1`] = `
<div
  class="ec-table-pagination"
  data-test="ec-smart-table-pagination ec-table-pagination"
>
  <div
    class="ec-table-pagination__page-size"
    data-test="ec-table-pagination__page-size"
  >
    <div
      class="ec-table-pagination__page-size-text"
    >
      Items per page:
    </div>
     
    <div
      class="ec-dropdown-search"
      data-test="ec-dropdown-search"
    >
      <ec-stub
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        offset="8"
        placement="bottom"
        popoverinnerclass="ec-dropdown-search__popover"
        popperoptions="[object Object]"
      >
        <button
          class="ec-table-pagination__action ec-table-pagination__action--page-size"
          data-test="ec-table-pagination__action--page-size"
        >
          
        10
        
          <svg
            class="ec-table-pagination__action-icon ec-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </button>
          
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <!---->
             
            <!---->
             
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="5"
            >
              5
            </li>
            <li
              class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="10"
            >
              10
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="50"
            >
              50
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="100"
            >
              100
            </li>
          </ul>
        </div>
      </ec-stub>
    </div>
  </div>
   
  <div
    class="ec-table-pagination__current-page"
    data-test="ec-table-pagination__current-page"
  >
    <span>
      2 of 5 pages
    </span>
     
    <span>
      (50 items)
    </span>
  </div>
   
  <div
    class="ec-table-pagination__total"
    data-test="ec-table-pagination__total"
  />
   
  <div
    class="ec-table-pagination__actions"
    data-test="ec-table-pagination__actions"
  >
    <button
      class="ec-table-pagination__action ec-table-pagination__action--prev"
      data-test="ec-table-pagination__action--prev"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-left"
        />
      </svg>
    </button>
     
    <button
      class="ec-table-pagination__action ec-table-pagination__action--next"
      data-test="ec-table-pagination__action--next"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-right"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`EcSmartTable pagination should re-fetch the data when page size is changed: loading icon after loading new page 1`] = `undefined`;

exports[`EcSmartTable pagination should re-fetch the data when page size is changed: loading icon while loading new page 1`] = `
<svg
  class="ec-loading__icon ec-icon"
  data-test="ec-loading__icon"
  height="48"
  width="48"
>
  <use
    xlink:href="#ec-simple-loading"
  />
</svg>
`;

exports[`EcSmartTable pagination should re-fetch the data when page size is changed: pagination after loading new page 1`] = `
<div
  class="ec-table-pagination"
  data-test="ec-smart-table-pagination ec-table-pagination"
>
  <div
    class="ec-table-pagination__page-size"
    data-test="ec-table-pagination__page-size"
  >
    <div
      class="ec-table-pagination__page-size-text"
    >
      Items per page:
    </div>
     
    <div
      class="ec-dropdown-search"
      data-test="ec-dropdown-search"
    >
      <ec-stub
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        offset="8"
        placement="bottom"
        popoverinnerclass="ec-dropdown-search__popover"
        popperoptions="[object Object]"
      >
        <button
          class="ec-table-pagination__action ec-table-pagination__action--page-size"
          data-test="ec-table-pagination__action--page-size"
        >
          
        50
        
          <svg
            class="ec-table-pagination__action-icon ec-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </button>
          
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <!---->
             
            <!---->
             
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="5"
            >
              5
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="10"
            >
              10
            </li>
            <li
              class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="50"
            >
              50
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="100"
            >
              100
            </li>
          </ul>
        </div>
      </ec-stub>
    </div>
  </div>
   
  <div
    class="ec-table-pagination__current-page"
    data-test="ec-table-pagination__current-page"
  >
    <span>
      1 of 1 pages
    </span>
     
    <span>
      (50 items)
    </span>
  </div>
   
  <div
    class="ec-table-pagination__total"
    data-test="ec-table-pagination__total"
  />
   
  <div
    class="ec-table-pagination__actions"
    data-test="ec-table-pagination__actions"
  >
    <button
      class="ec-table-pagination__action ec-table-pagination__action--prev ec-table-pagination__action--is-disabled"
      data-test="ec-table-pagination__action--prev"
      disabled="disabled"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-left"
        />
      </svg>
    </button>
     
    <button
      class="ec-table-pagination__action ec-table-pagination__action--next ec-table-pagination__action--is-disabled"
      data-test="ec-table-pagination__action--next"
      disabled="disabled"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-right"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`EcSmartTable pagination should re-fetch the data when prev page is selected 1`] = `
<div
  class="ec-table-pagination"
  data-test="ec-smart-table-pagination ec-table-pagination"
>
  <div
    class="ec-table-pagination__page-size"
    data-test="ec-table-pagination__page-size"
  >
    <div
      class="ec-table-pagination__page-size-text"
    >
      Items per page:
    </div>
     
    <div
      class="ec-dropdown-search"
      data-test="ec-dropdown-search"
    >
      <ec-stub
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        offset="8"
        placement="bottom"
        popoverinnerclass="ec-dropdown-search__popover"
        popperoptions="[object Object]"
      >
        <button
          class="ec-table-pagination__action ec-table-pagination__action--page-size"
          data-test="ec-table-pagination__action--page-size"
        >
          
        10
        
          <svg
            class="ec-table-pagination__action-icon ec-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </button>
          
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <!---->
             
            <!---->
             
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="5"
            >
              5
            </li>
            <li
              class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="10"
            >
              10
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="50"
            >
              50
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="100"
            >
              100
            </li>
          </ul>
        </div>
      </ec-stub>
    </div>
  </div>
   
  <div
    class="ec-table-pagination__current-page"
    data-test="ec-table-pagination__current-page"
  >
    <span>
      2 of 5 pages
    </span>
     
    <span>
      (50 items)
    </span>
  </div>
   
  <div
    class="ec-table-pagination__total"
    data-test="ec-table-pagination__total"
  />
   
  <div
    class="ec-table-pagination__actions"
    data-test="ec-table-pagination__actions"
  >
    <button
      class="ec-table-pagination__action ec-table-pagination__action--prev"
      data-test="ec-table-pagination__action--prev"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-left"
        />
      </svg>
    </button>
     
    <button
      class="ec-table-pagination__action ec-table-pagination__action--next"
      data-test="ec-table-pagination__action--next"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-right"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`EcSmartTable pagination should re-fetch the data when prev page is selected: loading icon after loading new page 1`] = `undefined`;

exports[`EcSmartTable pagination should re-fetch the data when prev page is selected: loading icon while loading new page 1`] = `
<svg
  class="ec-loading__icon ec-icon"
  data-test="ec-loading__icon"
  height="48"
  width="48"
>
  <use
    xlink:href="#ec-simple-loading"
  />
</svg>
`;

exports[`EcSmartTable pagination should re-fetch the data when prev page is selected: pagination after loading new page 1`] = `
<div
  class="ec-table-pagination"
  data-test="ec-smart-table-pagination ec-table-pagination"
>
  <div
    class="ec-table-pagination__page-size"
    data-test="ec-table-pagination__page-size"
  >
    <div
      class="ec-table-pagination__page-size-text"
    >
      Items per page:
    </div>
     
    <div
      class="ec-dropdown-search"
      data-test="ec-dropdown-search"
    >
      <ec-stub
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        offset="8"
        placement="bottom"
        popoverinnerclass="ec-dropdown-search__popover"
        popperoptions="[object Object]"
      >
        <button
          class="ec-table-pagination__action ec-table-pagination__action--page-size"
          data-test="ec-table-pagination__action--page-size"
        >
          
        10
        
          <svg
            class="ec-table-pagination__action-icon ec-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </button>
          
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <!---->
             
            <!---->
             
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="5"
            >
              5
            </li>
            <li
              class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="10"
            >
              10
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="50"
            >
              50
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="100"
            >
              100
            </li>
          </ul>
        </div>
      </ec-stub>
    </div>
  </div>
   
  <div
    class="ec-table-pagination__current-page"
    data-test="ec-table-pagination__current-page"
  >
    <span>
      1 of 5 pages
    </span>
     
    <span>
      (50 items)
    </span>
  </div>
   
  <div
    class="ec-table-pagination__total"
    data-test="ec-table-pagination__total"
  />
   
  <div
    class="ec-table-pagination__actions"
    data-test="ec-table-pagination__actions"
  >
    <button
      class="ec-table-pagination__action ec-table-pagination__action--prev ec-table-pagination__action--is-disabled"
      data-test="ec-table-pagination__action--prev"
      disabled="disabled"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-left"
        />
      </svg>
    </button>
     
    <button
      class="ec-table-pagination__action ec-table-pagination__action--next"
      data-test="ec-table-pagination__action--next"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-right"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`EcSmartTable pagination should render footer slot inside of the pagination when pagination is enabled 1`] = `
<tfoot
  class="ec-table-footer"
  data-test="ec-table-footer"
>
  <tr>
    <td
      class="ec-table-footer__cell"
      colspan="3"
    >
      <div
        class="ec-table-footer__contents"
      >
        <div
          class="ec-table-pagination"
          data-test="ec-smart-table-pagination ec-table-pagination"
        >
          <div
            class="ec-table-pagination__page-size"
            data-test="ec-table-pagination__page-size"
          >
            <div
              class="ec-table-pagination__page-size-text"
            >
              Items per page:
            </div>
             
            <div
              class="ec-dropdown-search"
              data-test="ec-dropdown-search"
            >
              <ec-stub
                class="ec-dropdown-search__trigger"
                data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
                offset="8"
                placement="bottom"
                popoverinnerclass="ec-dropdown-search__popover"
                popperoptions="[object Object]"
              >
                <button
                  class="ec-table-pagination__action ec-table-pagination__action--page-size"
                  data-test="ec-table-pagination__action--page-size"
                >
                  
        10
        
                  <svg
                    class="ec-table-pagination__action-icon ec-icon"
                    height="24"
                    width="24"
                  >
                    <use
                      xlink:href="#ec-simple-chevron-down"
                    />
                  </svg>
                </button>
                  
                <div>
                  <ul
                    class="ec-dropdown-search__item-list"
                    data-test="ec-dropdown-search__item-list"
                  >
                    <!---->
                     
                    <!---->
                     
                    <li
                      class="ec-dropdown-search__item"
                      data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
                      title="5"
                    >
                      5
                    </li>
                    <li
                      class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
                      data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
                      title="10"
                    >
                      10
                    </li>
                    <li
                      class="ec-dropdown-search__item"
                      data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
                      title="50"
                    >
                      50
                    </li>
                    <li
                      class="ec-dropdown-search__item"
                      data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
                      title="100"
                    >
                      100
                    </li>
                  </ul>
                </div>
              </ec-stub>
            </div>
          </div>
           
          <div
            class="ec-table-pagination__current-page"
            data-test="ec-table-pagination__current-page"
          >
            <span>
              1 of 5 pages
            </span>
             
            <span>
              (50 items)
            </span>
          </div>
           
          <div
            class="ec-table-pagination__total"
            data-test="ec-table-pagination__total"
          >
            <div>
              My custom footer
            </div>
          </div>
           
          <div
            class="ec-table-pagination__actions"
            data-test="ec-table-pagination__actions"
          >
            <button
              class="ec-table-pagination__action ec-table-pagination__action--prev ec-table-pagination__action--is-disabled"
              data-test="ec-table-pagination__action--prev"
              disabled="disabled"
              type="button"
            >
              <svg
                class="ec-table-pagination__action-icon ec-icon"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-simple-chevron-left"
                />
              </svg>
            </button>
             
            <button
              class="ec-table-pagination__action ec-table-pagination__action--next"
              data-test="ec-table-pagination__action--next"
              type="button"
            >
              <svg
                class="ec-table-pagination__action-icon ec-icon"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-simple-chevron-right"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </td>
  </tr>
</tfoot>
`;

exports[`EcSmartTable pagination should render footer slot when pagination is not enabled 1`] = `
<tfoot
  class="ec-table-footer"
  data-test="ec-table-footer"
>
  <tr>
    <td
      class="ec-table-footer__cell"
      colspan="3"
    >
      <div
        class="ec-table-footer__contents"
      >
        <div>
          My custom footer
        </div>
      </div>
    </td>
  </tr>
</tfoot>
`;

exports[`EcSmartTable pagination should render pagination when it's enabled 1`] = `
<div
  class="ec-table-pagination"
  data-test="ec-smart-table-pagination ec-table-pagination"
>
  <div
    class="ec-table-pagination__page-size"
    data-test="ec-table-pagination__page-size"
  >
    <div
      class="ec-table-pagination__page-size-text"
    >
      Items per page:
    </div>
     
    <div
      class="ec-dropdown-search"
      data-test="ec-dropdown-search"
    >
      <ec-stub
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        offset="8"
        placement="bottom"
        popoverinnerclass="ec-dropdown-search__popover"
        popperoptions="[object Object]"
      >
        <button
          class="ec-table-pagination__action ec-table-pagination__action--page-size"
          data-test="ec-table-pagination__action--page-size"
        >
          
        10
        
          <svg
            class="ec-table-pagination__action-icon ec-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </button>
          
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <!---->
             
            <!---->
             
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="5"
            >
              5
            </li>
            <li
              class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="10"
            >
              10
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="50"
            >
              50
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
              title="100"
            >
              100
            </li>
          </ul>
        </div>
      </ec-stub>
    </div>
  </div>
   
  <div
    class="ec-table-pagination__current-page"
    data-test="ec-table-pagination__current-page"
  >
    <span>
      1 of 5 pages
    </span>
     
    <span>
      (50 items)
    </span>
  </div>
   
  <div
    class="ec-table-pagination__total"
    data-test="ec-table-pagination__total"
  />
   
  <div
    class="ec-table-pagination__actions"
    data-test="ec-table-pagination__actions"
  >
    <button
      class="ec-table-pagination__action ec-table-pagination__action--prev ec-table-pagination__action--is-disabled"
      data-test="ec-table-pagination__action--prev"
      disabled="disabled"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-left"
        />
      </svg>
    </button>
     
    <button
      class="ec-table-pagination__action ec-table-pagination__action--next"
      data-test="ec-table-pagination__action--next"
      type="button"
    >
      <svg
        class="ec-table-pagination__action-icon ec-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-chevron-right"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`EcSmartTable should render empty data properly 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <!---->
     
    <!---->
  </div>
   No items found
</div>
`;

exports[`EcSmartTable should render error properly 1`] = `
<div
  class="ec-smart-table-error"
  data-test="ec-smart-table-error"
>
  <div>
    <!---->
     
    <!---->
  </div>
   Unexpected error while fetching data
</div>
`;

exports[`EcSmartTable should render in loading state by default 1`] = `
<div
  class="ec-smart-table"
  data-test="ec-smart-table"
>
  <div>
    <!---->
     
    <!---->
  </div>
  <div
    class="tw-py-48"
  >
    <div
      class="ec-loading"
      data-test="ec-loading"
    >
      <div
        class="ec-loading__backdrop"
        data-test="ec-loading__backdrop"
      >
        <svg
          class="ec-loading__icon ec-icon"
          data-test="ec-loading__icon"
          height="48"
          width="48"
        >
          <use
            xlink:href="#ec-simple-loading"
          />
        </svg>
      </div>
       
      <div
        class="ec-loading__content"
        data-test="ec-loading__content"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`EcSmartTable should render it's own title instead of using the one inside of ec-table 1`] = `
<div
  class="ec-smart-table"
  data-test="ec-smart-table"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random title
    </div>
     
    <!---->
  </div>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <!---->
     
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      <div>
        <!---->
         
        <div
          class="ec-table-scroll-container"
          data-test="ec-table-scroll-container"
        >
          <table
            class="ec-table"
          >
            <thead
              class="ec-table-head"
              data-test="ec-table-head"
            >
              <tr>
                <th
                  class="ec-table-head__cell"
                  data-test="ec-table-head__cell ec-table-head__cell--0"
                  scope="col"
                >
                  <span
                    class="ec-table-head__cell-wrapper"
                  >
                    <span
                      class="ec-table-head__cell-text"
                    >
                      
          Test 1
        
                    </span>
                     
                    <!---->
                     
                    <a
                      class="ec-table-sort ec-table-head__icon"
                      data-test="ec-table-sort"
                      href="#"
                      title="Not sorted"
                    >
                      <svg
                        class="ec-icon ec-table-sort__icon"
                        data-test="ec-table-sort__icon"
                        height="16"
                        width="16"
                      >
                        <use
                          xlink:href="#ec-simple-arrow-up-down"
                        />
                      </svg>
                       
                      <!---->
                    </a>
                  </span>
                </th>
                <th
                  class="ec-table-head__cell"
                  data-test="ec-table-head__cell ec-table-head__cell--1"
                  scope="col"
                >
                  <span
                    class="ec-table-head__cell-wrapper"
                  >
                    <span
                      class="ec-table-head__cell-text"
                    >
                      
          Test 2
        
                    </span>
                     
                    <!---->
                     
                    <!---->
                  </span>
                </th>
                <th
                  class="ec-table-head__cell"
                  data-test="ec-table-head__cell ec-table-head__cell--2"
                  scope="col"
                >
                  <span
                    class="ec-table-head__cell-wrapper"
                  >
                    <span
                      class="ec-table-head__cell-text"
                    >
                      
          Test 3
        
                    </span>
                     
                    <!---->
                     
                    <a
                      class="ec-table-sort ec-table-head__icon"
                      data-test="ec-table-sort"
                      href="#"
                      title="Not sorted"
                    >
                      <svg
                        class="ec-icon ec-table-sort__icon"
                        data-test="ec-table-sort__icon"
                        height="16"
                        width="16"
                      >
                        <use
                          xlink:href="#ec-simple-arrow-up-down"
                        />
                      </svg>
                       
                      <!---->
                    </a>
                  </span>
                </th>
              </tr>
            </thead>
             
            <tbody>
              <tr
                class=""
                data-test="ec-table__row ec-table__row--0"
              >
                <td
                  class="ec-table__cell"
                  data-test="ec-table__cell ec-table__cell--0"
                >
                  1
                </td>
                <td
                  class="ec-table__cell"
                  data-test="ec-table__cell ec-table__cell--1"
                >
                  2
                </td>
                <td
                  class="ec-table__cell"
                  data-test="ec-table__cell ec-table__cell--2"
                >
                  3
                </td>
              </tr>
            </tbody>
             
            <!---->
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EcSmartTable should render resolved data properly 1`] = `
<div
  class="ec-smart-table"
  data-test="ec-smart-table"
>
  <div>
    <!---->
     
    <!---->
  </div>
  <div
    class="ec-loading"
    data-test="ec-loading"
  >
    <!---->
     
    <div
      class="ec-loading__content ec-loading__content--is-transparent"
      data-test="ec-loading__content"
    >
      <div>
        <!---->
         
        <div
          class="ec-table-scroll-container"
          data-test="ec-table-scroll-container"
        >
          <table
            class="ec-table"
          >
            <thead
              class="ec-table-head"
              data-test="ec-table-head"
            >
              <tr>
                <th
                  class="ec-table-head__cell"
                  data-test="ec-table-head__cell ec-table-head__cell--0"
                  scope="col"
                >
                  <span
                    class="ec-table-head__cell-wrapper"
                  >
                    <span
                      class="ec-table-head__cell-text"
                    >
                      
          Test 1
        
                    </span>
                     
                    <!---->
                     
                    <a
                      class="ec-table-sort ec-table-head__icon"
                      data-test="ec-table-sort"
                      href="#"
                      title="Not sorted"
                    >
                      <svg
                        class="ec-icon ec-table-sort__icon"
                        data-test="ec-table-sort__icon"
                        height="16"
                        width="16"
                      >
                        <use
                          xlink:href="#ec-simple-arrow-up-down"
                        />
                      </svg>
                       
                      <!---->
                    </a>
                  </span>
                </th>
                <th
                  class="ec-table-head__cell"
                  data-test="ec-table-head__cell ec-table-head__cell--1"
                  scope="col"
                >
                  <span
                    class="ec-table-head__cell-wrapper"
                  >
                    <span
                      class="ec-table-head__cell-text"
                    >
                      
          Test 2
        
                    </span>
                     
                    <!---->
                     
                    <!---->
                  </span>
                </th>
                <th
                  class="ec-table-head__cell"
                  data-test="ec-table-head__cell ec-table-head__cell--2"
                  scope="col"
                >
                  <span
                    class="ec-table-head__cell-wrapper"
                  >
                    <span
                      class="ec-table-head__cell-text"
                    >
                      
          Test 3
        
                    </span>
                     
                    <!---->
                     
                    <a
                      class="ec-table-sort ec-table-head__icon"
                      data-test="ec-table-sort"
                      href="#"
                      title="Not sorted"
                    >
                      <svg
                        class="ec-icon ec-table-sort__icon"
                        data-test="ec-table-sort__icon"
                        height="16"
                        width="16"
                      >
                        <use
                          xlink:href="#ec-simple-arrow-up-down"
                        />
                      </svg>
                       
                      <!---->
                    </a>
                  </span>
                </th>
              </tr>
            </thead>
             
            <tbody>
              <tr
                class=""
                data-test="ec-table__row ec-table__row--0"
              >
                <td
                  class="ec-table__cell"
                  data-test="ec-table__cell ec-table__cell--0"
                >
                  1
                </td>
                <td
                  class="ec-table__cell"
                  data-test="ec-table__cell ec-table__cell--1"
                >
                  2
                </td>
                <td
                  class="ec-table__cell"
                  data-test="ec-table__cell ec-table__cell--2"
                >
                  3
                </td>
              </tr>
            </tbody>
             
            <!---->
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EcSmartTable sorting multi sort should allow sorting multiple columns: After sorting different column #2 ([DESC, null, ASC]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 1
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted descending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            desc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 2
        
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 3
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting multi sort should allow sorting multiple columns: After sorting different column ([ASC, null, ASC]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 1
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 2
        
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 3
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting multi sort should allow sorting multiple columns: Initial state ([ASC, null, null]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 1
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 2
        
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 3
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting multi sort should sort column: ASC -> DESC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span
      class="ec-table-head__cell-text"
    >
      
          Test 1
        
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted descending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        desc
      </span>
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting multi sort should sort column: ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span
      class="ec-table-head__cell-text"
    >
      
          Test 1
        
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting multi sort should sort column: DESC -> not sorted 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span
      class="ec-table-head__cell-text"
    >
      
          Test 1
        
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Not sorted"
    >
      <svg
        class="ec-icon ec-table-sort__icon"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-up-down"
        />
      </svg>
       
      <!---->
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting multi sort should sort column: not sorted -> ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span
      class="ec-table-head__cell-text"
    >
      
          Test 1
        
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting should render sortable columns 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 1
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 2
        
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 3
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting should render sorted columns 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 1
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 2
        
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 3
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted descending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            desc
          </span>
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should allow sorting only one column: After sorting different column #2 ([ASC, null, null]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 1
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 2
        
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 3
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should allow sorting only one column: After sorting different column ([null, null, ASC]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 1
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 2
        
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 3
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should allow sorting only one column: Initial state ([ASC, null, null]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 1
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 2
        
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          
          Test 3
        
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should sort column: ASC -> DESC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span
      class="ec-table-head__cell-text"
    >
      
          Test 1
        
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted descending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        desc
      </span>
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting single sort should sort column: ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span
      class="ec-table-head__cell-text"
    >
      
          Test 1
        
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting single sort should sort column: DESC -> not sorted 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span
      class="ec-table-head__cell-text"
    >
      
          Test 1
        
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Not sorted"
    >
      <svg
        class="ec-icon ec-table-sort__icon"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-up-down"
        />
      </svg>
       
      <!---->
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting single sort should sort column: not sorted -> ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span
      class="ec-table-head__cell-text"
    >
      
          Test 1
        
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </span>
</th>
`;
